SLI-1441 Rely on SLCORE issue tracking