@@ -27,16 +27,21 @@ import com.intellij.openapi.vfs.VirtualFile;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.concurrent.CompletableFuture;
+import java.util.UUID;
+import org.apache.commons.lang3.tuple.Pair;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.sonarlint.intellij.AbstractSonarLintLightTests;
 import org.sonarlint.intellij.actions.SonarLintToolWindow;
 import org.sonarlint.intellij.analysis.AnalysisResult;
+import org.sonarlint.intellij.analysis.AnalysisState;
 import org.sonarlint.intellij.analysis.AnalysisSubmitter;
+import org.sonarlint.intellij.analysis.RunningAnalysesTracker;
+import org.sonarlint.intellij.callable.CheckInCallable;
 import org.sonarlint.intellij.finding.LiveFindings;
 import org.sonarlint.intellij.finding.issue.LiveIssue;
 
@@ -48,16 +53,18 @@ import static org.mockito.Mockito.when;
 
 class SonarLintCheckinHandlerTests extends AbstractSonarLintLightTests {
 
-  private final CompletableFuture<Void> future = new CompletableFuture<>();
   private final VirtualFile file = mock(VirtualFile.class);
   private final AnalysisSubmitter analysisSubmitter = mock(AnalysisSubmitter.class);
+  private final RunningAnalysesTracker runningAnalysesTracker = mock(RunningAnalysesTracker.class);
   private final SonarLintToolWindow toolWindow = mock(SonarLintToolWindow.class);
   private final CheckinProjectPanel checkinProjectPanel = mock(CheckinProjectPanel.class);
+  private final CheckInCallable checkInCallable = mock(CheckInCallable.class);
   private SonarLintCheckinHandler handler;
 
   @BeforeEach
   void prepare() {
     replaceProjectService(AnalysisSubmitter.class, analysisSubmitter);
+    replaceProjectService(RunningAnalysesTracker.class, runningAnalysesTracker);
     replaceProjectService(SonarLintToolWindow.class, toolWindow);
 
     when(checkinProjectPanel.getVirtualFiles()).thenReturn(Collections.singleton(file));
@@ -65,69 +72,90 @@ class SonarLintCheckinHandlerTests extends AbstractSonarLintLightTests {
 
   @Test
   void testNoUnresolvedIssues() {
-    future.complete(null);
-    var issue = mock(LiveIssue.class);
-    when(issue.isResolved()).thenReturn(true);
-    when(analysisSubmitter.analyzeFilesPreCommit(Collections.singleton(file))).thenReturn(new AnalysisResult(new LiveFindings(Map.of(file, Set.of(issue)),
-      Collections.emptyMap()), Set.of(file), TriggerType.CHECK_IN, Instant.now()));
+    var uuid = UUID.randomUUID();
+    try (var analysisState = new AnalysisState(uuid, checkInCallable, Collections.singleton(file), getModule(), TriggerType.CHECK_IN)) {
+      var issue = mock(LiveIssue.class);
+      when(issue.isResolved()).thenReturn(true);
+      when(checkInCallable.analysisSucceeded()).thenReturn(true);
+      when(checkInCallable.getResult())
+        .thenReturn(List.of(new AnalysisResult(new LiveFindings(Map.of(file, Set.of(issue)), Collections.emptyMap()), Set.of(file), TriggerType.CHECK_IN, Instant.now())));
+      when(runningAnalysesTracker.getById(uuid)).thenReturn(analysisState);
+      when(runningAnalysesTracker.getById(uuid)).thenReturn(null);
+      when(analysisSubmitter.analyzeFilesPreCommit(Collections.singleton(file)))
+        .thenReturn(Pair.of(checkInCallable, List.of(uuid)));
 
-    handler = new SonarLintCheckinHandler(getProject(), checkinProjectPanel);
-    var result = handler.beforeCheckin(null, null);
+      handler = new SonarLintCheckinHandler(getProject(), checkinProjectPanel);
+      var result = handler.beforeCheckin(null, null);
 
-    assertThat(result).isEqualTo(CheckinHandler.ReturnResult.COMMIT);
-    verify(analysisSubmitter).analyzeFilesPreCommit(Collections.singleton(file));
-    verifyNoInteractions(toolWindow);
+      assertThat(result).isEqualTo(CheckinHandler.ReturnResult.COMMIT);
+      verify(analysisSubmitter).analyzeFilesPreCommit(Collections.singleton(file));
+      verifyNoInteractions(toolWindow);
+    }
   }
 
   @Test
   void testIssues() {
-    future.complete(null);
-    var issue = mock(LiveIssue.class);
-    when(issue.getRuleKey()).thenReturn("java:S123");
-    when(analysisSubmitter.analyzeFilesPreCommit(Collections.singleton(file))).thenReturn(new AnalysisResult(new LiveFindings(Map.of(file, Set.of(issue)),
-      Collections.emptyMap()), Set.of(file), TriggerType.CHECK_IN, Instant.now()));
+    var uuid = UUID.randomUUID();
+    try (var analysisState = new AnalysisState(uuid, checkInCallable, Collections.singleton(file), getModule(), TriggerType.CHECK_IN)) {
+      var issue = mock(LiveIssue.class);
+      when(issue.getRuleKey()).thenReturn("java:S123");
+      when(checkInCallable.analysisSucceeded()).thenReturn(true);
+      when(checkInCallable.getResult())
+        .thenReturn(List.of(new AnalysisResult(new LiveFindings(Map.of(file, Set.of(issue)), Collections.emptyMap()), Set.of(file), TriggerType.CHECK_IN, Instant.now())));
+      when(runningAnalysesTracker.getById(uuid)).thenReturn(analysisState);
+      when(runningAnalysesTracker.getById(uuid)).thenReturn(null);
+      when(analysisSubmitter.analyzeFilesPreCommit(Collections.singleton(file)))
+        .thenReturn(Pair.of(checkInCallable, List.of(uuid)));
 
-    handler = new SonarLintCheckinHandler(getProject(), checkinProjectPanel);
-    var messages = new ArrayList<>();
-    TestDialogManager.setTestDialog(msg -> {
-      messages.add(msg);
-      return Messages.OK;
-    });
-    var result = handler.beforeCheckin(null, null);
+      handler = new SonarLintCheckinHandler(getProject(), checkinProjectPanel);
+      var messages = new ArrayList<>();
+      TestDialogManager.setTestDialog(msg -> {
+        messages.add(msg);
+        return Messages.OK;
+      });
+      var result = handler.beforeCheckin(null, null);
 
-    assertThat(result).isEqualTo(CheckinHandler.ReturnResult.CLOSE_WINDOW);
-    assertThat(messages).containsExactly("SonarLint analysis on 1 file found 1 issue");
-    ArgumentCaptor<AnalysisResult> analysisResultCaptor = ArgumentCaptor.forClass(AnalysisResult.class);
-    verify(toolWindow).openReportTab(analysisResultCaptor.capture());
-    var analysisResult = analysisResultCaptor.getValue();
-    assertThat(analysisResult.getFindings().getIssuesPerFile()).containsEntry(file, Set.of(issue));
-    verify(analysisSubmitter).analyzeFilesPreCommit(Collections.singleton(file));
+      assertThat(result).isEqualTo(CheckinHandler.ReturnResult.CLOSE_WINDOW);
+      assertThat(messages).containsExactly("SonarLint analysis on 1 file found 1 issue");
+      ArgumentCaptor<AnalysisResult> analysisResultCaptor = ArgumentCaptor.forClass(AnalysisResult.class);
+      verify(toolWindow).openReportTab(analysisResultCaptor.capture());
+      var analysisResult = analysisResultCaptor.getValue();
+      assertThat(analysisResult.getFindings().getIssuesPerFile()).containsEntry(file, Set.of(issue));
+      verify(analysisSubmitter).analyzeFilesPreCommit(Collections.singleton(file));
+    }
   }
 
   @Test
   void testSecretsIssues() {
-    future.complete(null);
-    var issue = mock(LiveIssue.class);
-    when(issue.getRuleKey()).thenReturn("secrets:S123");
-    when(analysisSubmitter.analyzeFilesPreCommit(Collections.singleton(file))).thenReturn(new AnalysisResult(new LiveFindings(Map.of(file, Set.of(issue)),
-      Collections.emptyMap()), Set.of(file), TriggerType.CHECK_IN, Instant.now()));
+    var uuid = UUID.randomUUID();
+    try (var analysisState = new AnalysisState(uuid, checkInCallable, Collections.singleton(file), getModule(), TriggerType.CHECK_IN)) {
+      var issue = mock(LiveIssue.class);
+      when(issue.getRuleKey()).thenReturn("secrets:S123");
+      when(checkInCallable.analysisSucceeded()).thenReturn(true);
+      when(checkInCallable.getResult())
+        .thenReturn(List.of(new AnalysisResult(new LiveFindings(Map.of(file, Set.of(issue)), Collections.emptyMap()), Set.of(file), TriggerType.CHECK_IN, Instant.now())));
+      when(runningAnalysesTracker.getById(uuid)).thenReturn(analysisState);
+      when(runningAnalysesTracker.getById(uuid)).thenReturn(null);
+      when(analysisSubmitter.analyzeFilesPreCommit(Collections.singleton(file)))
+        .thenReturn(Pair.of(checkInCallable, List.of(uuid)));
 
-    handler = new SonarLintCheckinHandler(getProject(), checkinProjectPanel);
-    var messages = new ArrayList<>();
-    TestDialogManager.setTestDialog(msg -> {
-      messages.add(msg);
-      return Messages.OK;
-    });
-    var result = handler.beforeCheckin(null, null);
+      handler = new SonarLintCheckinHandler(getProject(), checkinProjectPanel);
+      var messages = new ArrayList<>();
+      TestDialogManager.setTestDialog(msg -> {
+        messages.add(msg);
+        return Messages.OK;
+      });
+      var result = handler.beforeCheckin(null, null);
 
-    assertThat(result).isEqualTo(CheckinHandler.ReturnResult.CLOSE_WINDOW);
-    assertThat(messages).containsExactly("SonarLint analysis on 1 file found 1 issue\n" +
-      "\n" +
-      "SonarLint analysis found 1 secret. Committed secrets may lead to unauthorized system access.");
-    ArgumentCaptor<AnalysisResult> analysisResultCaptor = ArgumentCaptor.forClass(AnalysisResult.class);
-    verify(toolWindow).openReportTab(analysisResultCaptor.capture());
-    var analysisResult = analysisResultCaptor.getValue();
-    assertThat(analysisResult.getFindings().getIssuesPerFile()).containsEntry(file, Set.of(issue));
-    verify(analysisSubmitter).analyzeFilesPreCommit(Collections.singleton(file));
+      assertThat(result).isEqualTo(CheckinHandler.ReturnResult.CLOSE_WINDOW);
+      assertThat(messages).containsExactly("SonarLint analysis on 1 file found 1 issue\n" +
+        "\n" +
+        "SonarLint analysis found 1 secret. Committed secrets may lead to unauthorized system access.");
+      ArgumentCaptor<AnalysisResult> analysisResultCaptor = ArgumentCaptor.forClass(AnalysisResult.class);
+      verify(toolWindow).openReportTab(analysisResultCaptor.capture());
+      var analysisResult = analysisResultCaptor.getValue();
+      assertThat(analysisResult.getFindings().getIssuesPerFile()).containsEntry(file, Set.of(issue));
+      verify(analysisSubmitter).analyzeFilesPreCommit(Collections.singleton(file));
+    }
   }
 }
